[tool.poetry]
name = "async-python-sprint-4"
version = "0.1.0"
description = "sprint 4 in Async Python Course in Yandex Praktikum"
authors = ["Bernar Berdikul <dabeerman32215@gmail.com>"]
readme = "README.md"
packages = [{include = "async_python_sprint_4"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
alembic = "^1.10.4"
uvicorn = "^0.21.1"
orjson = "^3.8.10"
asyncpg = "^0.27.0"
sqlmodel = "^0.0.8"
httpx = "^0.24.0"


[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
factory-boy = "^3.2.1"
flake8 = "^6.0.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
